@@ -60,10 +60,11 @@ def bandpass(data, freqmin, freqmax, df, corners=4, zerophase=False):
     low = freqmin / fe
     high = freqmax / fe
     # raise for some bad scenarios
-    if high > 1:
-        high = 1.0
-        msg = "Selected high corner frequency is above Nyquist. " + \
-              "Setting Nyquist as high corner."
+    if high >= 1.0:
+        high = 0.999999999
+        msg = ("Selected high corner frequency ({}) is at or above Nyquist "
+               "({}). Setting ({} * Nyquist = {} Hz) as high corner.").format(
+                   freqmax, fe, high, high * fe)
         warnings.warn(msg)
     if low > 1:
         msg = "Selected low corner frequency is above Nyquist."
